--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -115,11 +115,16 @@
                       </div>
                   </div>
 
+                  <div *ngIf="sMensaje">
+                    <p class="alert alert-danger" role="alert">{{sMensaje}}</p>
+                  </div>
+
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                          <button type="submit" (click)="consultaPrecios()" class="btnFonelli btn">BUSCAR</button>
+                          <button type="submit" (click)="consultaPrecios()" class="btnFonelli btn"><span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>
                       </div>
                   </div>  
+    
               </form><!-- End General Form Elements --> 
               
             </div> 
@@ -143,7 +148,7 @@
   <div id="pdfTable" #pdfTable>
       <table  class="table table-hover table-striped">
         <thead>
-          <tr>
+          <tr class="EncTabla">
           <th style="background-color: #24a4cc; color: white;" scope="col" >#</th>
           <th style="background-color: #24a4cc; color: white;" scope="col">GPO</th>
           <th style="background-color: #24a4cc; color: white;" scope="col">LN</th>
@@ -166,9 +171,9 @@
         </tbody>          
       </table>
 
-      <div class="form-group col-md-12">
-        <label class="float-right">      
-          <strong >Precio: </strong> {{formatoMoneda(oPreciosRes.Contenido.Precio)}}     
+      <div class="form-group col-md-12" >
+        <label class="float-right" style="background-color:#24a4cc; font-size: 23px; color:white;">      
+          <strong >Precio: $</strong> {{formatoMoneda(oPreciosRes.Contenido.Precio)}}     
         </label> 
       </div> 
 
