--- a/src/app/components/estadocuenta/estadocuenta.component.html
+++ b/src/app/components/estadocuenta/estadocuenta.component.html
@@ -103,16 +103,20 @@
                         </div>
                     </div>
   
+
+                    <div *ngIf="sMensaje">
+                      <p class="alert alert-danger" role="alert">{{sMensaje}}</p>
+                    </div>
                     <div class="form-row">
                         <div class="form-group col-md-3">
-                            <button type="submit" (click)="consultaEstadoCuenta()" class="btnFonelli btn">BUSCAR</button>
+                            <button type="submit" (click)="consultaEstadoCuenta()" class="btnFonelli btn"> <span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>
                         </div>
                         <div class="form-group col-md-3">
                           <button hidden="{{ bCliente }}" type="submit"  class="btnFonelli btn">CATALOGO DE CLIENTES</button>
                       </div>
                     </div>  
                     
-                    <p>{{sMensaje}}</p>              
+                                 
                 </form><!-- End General Form Elements --> 
               </div> 
             </div>
@@ -143,7 +147,7 @@
         <div id="pdfTable" #pdfTable>
           <table class="table table-hover table-striped  ">
             <thead>
-              <tr>
+              <tr class="EncTabla">
                 <th style="background-color: #24a4cc; color: white;">OF</th><!--Codigo oficina -->
                 <th style="background-color: #24a4cc; color: white;">C</th><!--Codigo tipo cartera -->
                 <th style="background-color: #24a4cc; color: white;">S</th><!--Documento serie -->
