--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -310,13 +310,17 @@
                         </div>                     
                     </div>   
                   
-                  <br>   
+                    <div *ngIf="sMensaje">
+                      <p class="alert alert-danger" role="alert">{{sMensaje}}</p>
+                    </div>
+
+                     
                   <div class="form-row">
                       <div class="form-group col-md-6">
-                          <button type="submit" (click)="consultaRelPed()" class="btnFonelli btn">BUSCAR</button>
+                          <button type="submit" (click)="consultaRelPed()" class="btnFonelli btn"> <span *ngIf="bCargando" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span> BUSCAR</button>
                       </div>
                   </div> 
-                  <p>{{sMensaje}}</p>             
+                              
   
   
                 
@@ -353,7 +357,7 @@
           </div>
 
       <div id="pdfTable" #pdfTable>
-        <table class="table table-hover table-striped" >
+        <table class="table table-hover table-striped"   >
           <thead >
             <tr class="EncTabla" >
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white;" >TP</th><!--Pedido codigo -->
@@ -361,20 +365,20 @@
               <th style="background-color: #24a4cc; color: white;">PEDIDO</th><!--Pedido folio -->
               <th style="background-color: #24a4cc; color: white;">CLTE</th><!--Cliente codigo -->
               <th style="background-color: #24a4cc; color: white;">FIL</th><!--Cliente filial -->
-              <th style="background-color: #24a4cc; color: white;">FECHA PEDIDO</th><!--Fecha pedido -->
-              <th *ngIf="!bCliente"  style="background-color: #24a4cc; color: white;">FECHA APROD</th><!--Fecha pedido produccion -->
-              <th  style="background-color: #24a4cc; color: white;">FECHA CANCOP</th><!--Fecha cancelacion -->
+              <th style="background-color: #24a4cc; color: white; text-align:center;"><div class="size">FECHA PEDIDO</div></th><!--Fecha pedido -->
+              <th *ngIf="!bCliente"  style="background-color: #24a4cc; color: white; text-align:center;"><div class="size">FECHA APROD</div></th><!--Fecha pedido produccion -->
+              <th  style="background-color: #24a4cc; color: white; text-align:center;"><div class="size">FECHA CANCOP</div></th><!--Fecha cancelacion -->
               <th style="background-color: #24a4cc; color: white;">S</th><!--Pedido status -->
-              <th style="background-color: #24a4cc; color: white; text-align:right;" >DIAS ATRAS</th><!--Dias atraso -->
-              <th style="background-color: #24a4cc; color: white; text-align:right;">CANT PEDID</th><!--Cantidad perdida -->
+              <th style="background-color: #24a4cc; color: white; text-align:center;" >DIAS ATRAS</th><!--Dias atraso -->
+              <th style="background-color: #24a4cc; color: white; text-align:center;">CANT PEDID</th><!--Cantidad perdida -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">IMPORTE</th><!-- Cantidad perdida importe -->
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align:right;">VALOR AGREGADO</th><!---->
-              <th style="background-color: #24a4cc; color: white; text-align:right;">CANT SURTID</th><!--Cantidad surtida -->
+              <th style="background-color: #24a4cc; color: white; text-align:center;">CANT SURTID</th><!--Cantidad surtida -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">IMPORTE</th><!--Cantidad surtida importe -->
               <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align:right;">VALOR AGREGADO</th><!-- -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">DIFER</th><!--Diferencia cantidad producto -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">IMPORTE</th><!--Diferencia importe surtido -->
-              <th style="background-color: #24a4cc; color: white; text-align:right;">VALOR AGREGADO</th><!--Valor agregado -->
+              <th *ngIf="!bCliente" style="background-color: #24a4cc; color: white; text-align:right;">VALOR AGREGADO</th><!--Valor agregado -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">PEDIDO A PROD</th><!--Pedido a prod -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">CANT PROD</th><!--Cantidad a prod -->
               <th style="background-color: #24a4cc; color: white; text-align:right;">DIFER</th><!--Cantidad a prod -->
@@ -401,7 +405,7 @@
                   <td class="FilasFonelli text-left"><u>{{pedido.PedidoFolio}}</u></td>
                   <td class="FilasFonelli text-left">{{pedido.ClienteCodigo}}</td>
                   <td class="FilasFonelli text-left">{{pedido.ClienteFilial}}</td>
-                  <td class="FilasFonelli text-left">{{pedido.FechaPedido}}</td>
+                  <td class="FilasFonelli">{{pedido.FechaPedido}}</td>
                   <td *ngIf="!bCliente" class="FilasFonelli text-left">{{pedido.FechaPedidoProduccion}}</td>
                   <td class="FilasFonelli text-left">{{pedido.FechaCancelacion}}</td>
                   <td class="FilasFonelli text-left">{{pedido.PedidoStatus}}</td>
@@ -411,10 +415,10 @@
                   <td *ngIf="!bCliente" class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadPedidaValorAgregado)}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadSurtida}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadSurtidaImporte)}}</td>                
-                  <td *ngIf="!bCliente" class="FilasFonelli">{{formatoMoneda(pedido.CantidadSurtidaValorAgregado)}}</td>                
+                  <td *ngIf="!bCliente" class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.CantidadSurtidaValorAgregado)}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{pedido.DiferenciaCantidadProducido}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.DiferenciaImporteSurtido)}}</td>                
-                  <td class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.DiferenciaValorAgregado)}}</td>                
+                  <td *ngIf="!bCliente" class="FilasFonelli" style="text-align:right;">{{formatoMoneda(pedido.DiferenciaValorAgregado)}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadPedidaProduccion}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{pedido.CantidadProducida}}</td>                
                   <td class="FilasFonelli" style="text-align:right;">{{pedido.DiferenciaCantidadProducido}}</td>                
@@ -436,12 +440,12 @@
                   <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPed(tipoPed.Pedidos)}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportes(tipoPed.Pedidos))}}</td>
                   <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregado(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold">{{getTotalCanSurtida(tipoPed.Pedidos)}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{getTotalCanSurtida(tipoPed.Pedidos)}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCanSurtidaImporte(tipoPed.Pedidos))}}</td>
                   <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCSValorImporte(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold">{{getTotalDifCantidadPro(tipoPed.Pedidos)}}</td>
+                  <td class="FilasFonBold" style="text-align:right;">{{getTotalDifCantidadPro(tipoPed.Pedidos)}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtido(tipoPed.Pedidos))}}</td>
-                  <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregado(tipoPed.Pedidos))}}</td>
+                  <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregado(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedidaProd(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProd(tipoPed.Pedidos))}}</td>
                   <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProd(tipoPed.Pedidos))}}</td>
@@ -464,12 +468,12 @@
               <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPedOficina(relPed.TipoPedido)}}</td>
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportesOficina(relPed.TipoPedido))}}</td>
               <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregadoOficina(relPed.TipoPedido))}}</td>
-              <td class="FilasFonBold">{{getTotalCanSurtidaOficina(relPed.TipoPedido)}}</td>
+              <td class="FilasFonBold" style="text-align:right;">{{getTotalCanSurtidaOficina(relPed.TipoPedido)}}</td>
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCanSurtidaImporteOficina(relPed.TipoPedido))}}</td>
               <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCSValorImporteOficina(relPed.TipoPedido))}}</td>
-              <td class="FilasFonBold">{{getTotalDifCantidadProOficina(relPed.TipoPedido)}}</td>
+              <td class="FilasFonBold" style="text-align:right;">{{getTotalDifCantidadProOficina(relPed.TipoPedido)}}</td>
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtidoOficina(relPed.TipoPedido))}}</td>  
-              <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoOficina(relPed.TipoPedido))}}</td>  
+              <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoOficina(relPed.TipoPedido))}}</td>  
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedidoProdOficina(relPed.TipoPedido))}}</td>  
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProducidaOficina(relPed.TipoPedido))}}</td>  
               <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProdOficina(relPed.TipoPedido))}}</td>  
@@ -491,12 +495,12 @@
             <td class="FilasFonBold" style="text-align:right;">{{getTotalCanPedGranTotal(oRelacionPedRes.Contenido)}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalImportesGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td  *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCPValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold ">{{getTotalCanSurtidaGranTotal(oRelacionPedRes.Contenido)}}</td>
+            <td class="FilasFonBold " style="text-align:right;">{{getTotalCanSurtidaGranTotal(oRelacionPedRes.Contenido)}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCanSurtidaImporteGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td  *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCSValorImporteGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold">{{getTotalDifCantidadProGranTotal(oRelacionPedRes.Contenido)}}</td>
+            <td class="FilasFonBold" style="text-align:right;">{{getTotalDifCantidadProGranTotal(oRelacionPedRes.Contenido)}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifImporteSurtidoGranTotal(oRelacionPedRes.Contenido))}}</td>
-            <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
+            <td *ngIf="!bCliente" class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifValorAgregadoGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantPedProdGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
             <td class="FilasFonBold" style="text-align:right;">{{formatoMoneda(getTotalDifCantidadProdGranTotal(oRelacionPedRes.Contenido))}}</td>
