Se modifican rutas de URLs

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -112,7 +112,7 @@
 }
 
  .fondo_mensaje_contacto {
-   background-color:    #198754;
+   background-color:    #24a4cc;
    color: white;
    font-size: large;
 
