Se agrega configuración de video para IOS

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
         </div>
     
         <div class="videoWrapper">
-            <video video loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true" class="custom-video">
+            <video video loop muted autoplay playsinline oncanplay="this.play()" onloadedmetadata="this.muted = true" class="custom-video">
                 <source src="../../../assets/videos/intro/PaginaFonelli.mp4" type="video/mp4">
     
                 Your browser does not support the video tag.
