Se agregan modificaciones esteticas y de funcionalidad en reportes y en home se reajusta el menu principal

--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -113,7 +113,7 @@
           <br>
           <div class="form-row">
             <div class="form-group col-md-1">              
-              <label class="CamposFonelli">Búsqueda</label>
+              <label class="CamposFonelli">Pedido:</label>
             </div>
             <div class="form-group col-md-5">              
               <input
@@ -139,9 +139,9 @@
               <th style="background-color: #24a4cc; color: white; " scope="col">PEDIDO</th>
               <th style="background-color: #24a4cc; color: white; " scope="col">OF</th>
               <th style="background-color: #24a4cc; color: white;" scope="col">S</th>
-              <th style="background-color: #24a4cc; color: white;" scope="col">FECHA PED</th>
-              <th style="background-color: #24a4cc; color: white;" scope="col">FECHA CANCOP</th>
-              <th style="background-color: #24a4cc; color: white;" scope="col">FECHA SURT</th>
+              <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col"><div class="size">FECHA PED</div></th>
+              <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col"><div class="size">FECHA CANCOP</div></th>
+              <th style="background-color: #24a4cc; color: white; text-align: center;" scope="col"><div class="size">FECHA SURT</div></th>
               <th style="background-color: #24a4cc; color: white; text-align:right;">PEDIDO</th>
               <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">SURTIDO</th>
               <th style="background-color: #24a4cc; color: white; text-align:right;" scope="col">DIFCIA</th>
