--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="fixedElement">
-  <button class="btn btn-primary" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+  <button class="btn btn-primary" style="background-color: #24a4cc; border: none;" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
   <div class="cat ">
     <a href="#">
       <img  src="../../../assets/images/principal/logo_fonelli.png"  >
