--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -339,7 +339,7 @@
         <br>
           <div class="form-row">
             <div class="form-group col-md-1">              
-              <label class="CamposFonelli">Búsqueda</label>
+              <label class="CamposFonelli">Pedido:</label>
             </div>
             <div class="form-group col-md-5">              
               <input
