--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -383,7 +383,7 @@
           <div *ngIf="bBandera" class="table-responsive container">
             <br>
             <div class="form-row">
-              <div class="form-group col-md-1">              
+              <!-- <div class="form-group col-md-1">              
                 <label class="CamposFonelli">Búsqueda</label>
               </div>
               <div class="form-group col-md-5">              
@@ -393,8 +393,8 @@
                     [(ngModel)]="searchtext"
                     placeholder="Search"                 
                   />
-                </div>
-                  <div class="form-group col-md-6">
+                </div> -->
+                  <div class="form-group col-md-12">
                     <button class="btnImprimir btn float-right" (click)="downloadAsPDF()" >      
                       Imprimir PDF      
                     </button> 
